--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Hi!</h1>
+<h1>Welcome to list watcher! </h1>
+    You can start by clicking mails on the menu.
 {% endblock %}
