--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -24,6 +24,10 @@
             <a class="navbar-brand" href="/">list-watcher</a>
           </div>
 
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{{ url_for('mails.get_mails') }}">mails</a></li>
+          </ul>
+
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
