--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,14 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul>
+        {% for message in messages %}
+            <li>{{ message }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     <form class="form-signin" role="form" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input name="name" type="text" class="form-control" placeholder="Email address" required autofocus>
-        <input name="password" type="password" class="form-control" placeholder="Password" required>
         <input name="openid" type="hidden" value="https://www.google.com/accounts/o8/id"/>
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in with google</button>
     </form>
 {% endblock %}
