--- a/web/templates/mails.html
+++ b/web/templates/mails.html
@@ -34,13 +34,13 @@
     {% endif %}
 
     {% if mail != None %}
-        <form>
+        <form role="form" action="/mails/addtag/" id="addtagsform">
             <p>
                 Tags
             </p>
             <ul id="myTags"></ul>
             {% if g.user %}
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" formmethod="post">
             {% endif %}
         </form><br>
         <label>Sender</label>: {{ mail.sender }}<br>
