--- a/web/templates/mails.html
+++ b/web/templates/mails.html
@@ -74,6 +74,7 @@
         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="mail-table">
         <thead>
             <tr>
+                <th>Tags</th>
                 <th>Sender</th>
                 <th>Subject</th>
                 <th>Date</th>
@@ -82,6 +83,13 @@
         <tbody>
             {% for mail in mails %}
             <tr>
+                <td>
+                    <ul class="mailTags">
+                        {% for tag in mail.tags %}
+                            <li>{{ tag.name }}</li>
+                        {% endfor %}
+                    </ul>
+                </td>
                 <td>{{ mail.sender  }}</td>
                 <td><a href="{{ url_for('mails.get_mails', ident=mail.message_id) }}"> {{ mail.subject}} </a></td>
                 <td>{{ mail.date }}</td>
