--- a/web/templates/tags.html
+++ b/web/templates/tags.html
@@ -9,7 +9,7 @@
     </form>
     <ul id="tag-list">
     {% for tag in tags %}
-        <li id="{{ tag.id }}"><div class="click" id="div_2">{{ tag.name }}</div><span data-id='{{ tag.id }}' class="glyphicon glyphicon-edit edit" ></span> <span id='delete' data-id='{{ tag.id }}' class="glyphicon glyphicon-remove delete" ></span></li>
+        <li id="{{ tag.id }}"><div class="click" id="{{ tag.id }}">{{ tag.name }}</div><span id='delete' data-id='{{ tag.id }}' class="glyphicon glyphicon-remove delete" ></span></li>
     {% endfor %}
     </ul>
 
@@ -18,4 +18,5 @@
 <script src="{{ url_for('static', filename='js/tags.js') }}" ></script>
 <script src="{{ url_for('static', filename='js/bootstrap-tagsinput.min.js') }}" ></script>
 <script src="{{ url_for('static', filename='js/jquery.jeditable.mini.js') }}" ></script>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/tags.css') }}">
 {% endblock %}
